--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,9 @@
                     <version>0.8.8</version>
                     <configuration>
                         <output>file</output>
+                        <excludes>
+                            <exclude>ru/practicum/shareit/Constant.class</exclude>
+                        </excludes>
                     </configuration>
                     <executions>
                         <execution>
